<resources>
    <string name="dialog_add_definition_header">Definition:</string>
    <string name="dialog_add_definition_et_hint">Write definition here:</string>
    <string name="dialog_add_definition_btn_add">add</string>
    <string name="fab_content_description_add_word">Add Word</string>
    <string name="option_countable">countable</string>
    <string name="hint_write_word_here">new value....</string>
    <string name="title_word">Update Word:</string>
    <string name="ok">OK</string>
    <string name="option_transitive">transitive</string>
    <string name="delete_word">Delete Word</string>
    <string name="add_definition">Add Definition</string>
    <string name="edit_definition">Edit Definition</string>
    <string name="add_sample">Add Sample</string>
    <string name="delete_definition">Delete Definition</string>
    <string name="empty">Empty</string>
    <string name="todo">TODO</string>
    <string name="edit_word">Edit Word</string>
    <string name="none">NONE</string>
    <string name="a1">A1</string>
    <string name="a2">A2</string>
    <string name="b1">B1</string>
    <string name="b2">B2</string>
    <string name="c1">C1</string>
    <string name="c2">C2</string>
    <string name="countable">Countable</string>
    <string name="uncountable">Uncountable</string>
    <string name="plural">Plural</string>
    <string name="usually_plural">Usually Plural</string>
    <string name="usually_singular">Usually Singular</string>
    <string name="transitive">Transitive</string>
    <string name="intransitive">Intransitive</string>
    <string name="after_noun">After Noun</string>
    <string name="after_verb">After Verb</string>
    <string name="before_noun">Before Noun</string>
    <string name="comparative">Comparative</string>
    <string name="superlative">Superlative</string>
    <string name="not_gradable">Not Gradable</string>
    <string name="this_is_hint">This is hint</string>
    <string name="argh">ARGH</string>
    <string name="argh_del">ARGH DELETE</string>
    <string name="dialog_add_sample_header">Sample:</string>
    <string name="dialog_add_sample_et_hint">Add Sample here....</string>
    <string name="dialog_add_sample_source_et_hint">Add sample source....</string>
</resources>