<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="me.apomazkin.feature_vocabulary_impl.ui.addDefinition.AddDefinitionViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/d32"
        android:orientation="vertical"
        android:padding="@dimen/d16">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d16"
            android:text="@string/dialog_add_definition_header"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkedChip="@id/chipNone"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/none" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipA1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/a1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipA2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/a2" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipB1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/b1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipB2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/b2" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipC1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/c1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipC2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/c2" />

        </com.google.android.material.chip.ChipGroup>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d16"
            android:autofillHints="ЧОЧО?"
            android:hint="@string/dialog_add_definition_et_hint"
            android:inputType="textAutoCorrect|textLongMessage"
            android:text="@={model.addingDefinition}" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/d16"
            android:onClick="@{() -> model.onAddDefinition()}"
            android:text="@string/dialog_add_definition_btn_add" />

    </LinearLayout>
</layout>