<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="model"
            type="me.apomazkin.feature_vocabulary_impl.ui.addSample.AddSampleViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/d32"
        android:orientation="vertical"
        android:padding="@dimen/d16">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d16"
            android:text="@string/dialog_add_sample_header"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d16"
            android:autofillHints="ЧОЧО?"
            android:hint="@string/dialog_add_sample_et_hint"
            android:inputType="textAutoCorrect|textLongMessage"
            android:text="@={model.sampleValue}" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d16"
            android:autofillHints="ЧОЧО?"
            android:hint="@string/dialog_add_sample_source_et_hint"
            android:inputType="textAutoCorrect|textLongMessage"
            android:text="@={model.sampleSource}" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/d16"
            android:onClick="@{() -> model.onAddSample()}"
            android:text="@string/dialog_add_definition_btn_add" />

    </LinearLayout>
</layout>