<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="model"
            type="me.apomazkin.feature_vocabulary_impl.ui.addWord.AddWordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/d32"
        android:orientation="vertical"
        android:padding="@dimen/d16">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d16"
            android:text="@string/title_word"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d16"
            android:hint="@string/hint_write_word_here"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={model.addingWord}" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/d16"
            android:onClick="@{() -> model.onAddWord()}"
            android:text="@string/ok" />

    </LinearLayout>
</layout>